实现了没有按时删除的简易回收站

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -127,5 +127,6 @@
     <string name="press_back_twice">再按一次退出程序</string>
     <string name="main_title">便籤</string>
     <string name="about_us">关于</string>
+    <string name="recover">恢复</string>
 
 </resources>
